Fix friend buttons and suggestions alignment

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -220,38 +220,37 @@
     .suggestions{
       width: 100%;
       .suggestion{
-        font-size: .7em;
         margin-top: .5em;
+        align-items: flex-start;
+        
+        a{
+          font-size: .7em;
+        }
+        
         img{
           width: 60px;
           height: 60px;
         }
         .suggestion-actions{
+          vertical-align: top;
           justify-content: flex-start;
           align-items: flex-start;
-          margin: none;
+          margin-top: -.5em;
           margin-left: .2em;
           width: 70%;
-          
-          a.relationship-btn{
-            padding: 0em 2em;
+
+          .profile-link{
+            padding-top: 0;
           }
         }
-
-        .row{
-          align-items: flex-start;
-          justify-content: flex-start;
-
-          a{
-            margin-top: -1em;
-          }
-        }
+        
       }
     }
   }
 
-
+  
 }
+
 
 .user-card-avatar{
   border-radius: 50%;
